Update beaver post

--- a/_posts/2021-12-22-Beavers.markdown
+++ b/_posts/2021-12-22-Beavers.markdown
@@ -18,8 +18,8 @@ It is interesting to think about the evolutionary process that has directed the 
 
 What kind of thought structure causes them to take action to limit the leak? Is it something akin to indignation, a sense of duty, or some form of basic instinct that bears little resemblance to human feelings?
 
-By a similar way of thinking we can imagine how our specie get to the top of food chain, what kind of tools were first developed and what kind of strategies. Unlike other species of primates our beta males are able to take out of power any alpha dominant. 
+Analogous to thinking about beaver behavior, we can imagine how our species got to the top of the food chain, what kinds of tools and strategies were developed. We are also capable of building dams, perhaps for different reasons.
 
-And here we have a link that presents human behavior. Falling off the top of a cliff(and perhaps the food chain itself) chasing a wheel of cheese.
+Below we have a link that presents human behavior. Falling off the top of a cliff(and perhaps the food chain itself) chasing a wheel of cheese.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/gNj67kwWBoQ" frameborder="0" allowfullscreen></iframe>
