--- a/_posts/2022-03-10-Castores.markdown
+++ b/_posts/2022-03-10-Castores.markdown
@@ -18,6 +18,8 @@ Os castores têm uma inquietude inata quando escutam o som da água despejada, p
 
 Que tipo de estrutura de pensamento faz com que eles tomem uma ação para limitar o vazamento? Seria algo semelhante a indignação, senso de dever, ou alguma forma de instinto básico que pouco se asemelha aos sentimentos humanos?
 
-E aqui temos um link que apresenta um comportamento humano. Cair do topo de uma ribanceira(e talvez da própria cadeia alimentar) perseguindo uma roda de queijo.
+Analogamente ao pensamento sobre o comportamento dos castores, podemos imaginar como nossa espécie chegou ao topo da cadeia alimentar, quais tipos de ferramentas e estratégias foram desenvolvidas. Também somos capazes de construir represas, talvez por motivos diferentes.
+
+A seguir temos um link que apresenta um comportamento humano. Cair do topo de uma ribanceira(e talvez da própria cadeia alimentar) perseguindo uma roda de queijo.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/gNj67kwWBoQ" frameborder="0" allowfullscreen></iframe>
