replace beaver picture with a lighter format

--- a/_posts/2021-12-22-Beavers.markdown
+++ b/_posts/2021-12-22-Beavers.markdown
@@ -8,7 +8,7 @@ lang: en
 ref: beavers
 ---
 
-![Beaver](https://raw.githubusercontent.com/kultzak/kultzak.github.io/master/_assets/images/American_Beaver.jpg)
+![Beaver](https://raw.githubusercontent.com/kultzak/kultzak.github.io/master/_assets/images/American_Beaver.webp)
 
 Beavers...
 
